--- a/handsOn_ex1.qmd
+++ b/handsOn_ex1.qmd
@@ -86,7 +86,7 @@ skimr::skim(exam_data)
 [No missing data.]{style="color:#d69c3c"}
 :::
 
-## **4. DATA VISUALISATION**
+# **4. DATA VISUALISATION**
 
 ## **4.1 Compare Charts between R Graphics and ggplot2**
 
@@ -492,9 +492,8 @@ ggplot(data = exam_data,
 
 -   The *Coordinates* functions map the position of objects onto the plane of the plot.
 
-```{=html}
 <!-- -->
-```
+
 -   There are a number of different possible coordinate systems to use, they are:
 
     -   [`coord_cartesian()`](https://ggplot2.tidyverse.org/reference/coord_cartesian.html): the default cartesian coordinate systems, where you specify x and y values (e.g. allows you to zoom in or out).
@@ -505,7 +504,7 @@ ggplot(data = exam_data,
 
     -   [`coord_quickmap()`](https://ggplot2.tidyverse.org/reference/coord_map.html): a coordinate system that approximates a good aspect ratio for maps.
 
-### 4.3.1. Working with Coordinate
+### **4.3.1. Working with Coordinate**
 
 ::: {.callout-warning appearance="simple" icon="false"}
 By the default, the bar chart of ggplot2 is in vertical form.
@@ -520,7 +519,7 @@ ggplot(data = exam_data,
 ```
 :::
 
-### 4.3.2 Change range for y- and x-axis
+### **4.3.2 Change range for y- and x-axis**
 
 ::: {.callout-warning appearance="simple" icon="false"}
 The scatterplot on the right is slightly misleading because the y-aixs and x-axis range are not equal.
@@ -739,6 +738,44 @@ exam_data %>%
 -   [Plot above added title and subtitle to set the main context for this plot]{style="font-size: 11pt; color: rgb(214, 156, 60);"}.
 
 ![](images/image-1254806109.png)
+
+Below are two (2) code chunk with different approach provided by the lesson :
+
+```{r}
+#| code-fold: false
+#| eval: false
+ggplot(data=exam_data,
+       aes(x=reorder(RACE,RACE,
+                function(x)-length(x))))+
+  geom_bar() +
+  ylim(0,220) +
+  geom_text(stat="count", 
+      aes(label=paste0(..count.., ", ", 
+      round(..count../sum(..count..)*100,
+            1), "%")),
+      vjust=-1) +
+  xlab("Race") +
+  ylab("No. of\nPupils") +
+  theme(axis.title.y=element_text(angle = 0))
+```
+
+```{r}
+#| code-fold: false
+#| eval: false
+exam_data %>%
+  mutate(RACE = fct_infreq(RACE)) %>%
+  ggplot(aes(x = RACE)) + 
+  geom_bar()+
+  ylim(0,220) +
+  geom_text(stat="count", 
+      aes(label=paste0(..count.., ", ", 
+      round(..count../sum(..count..)*100,
+            1), "%")),
+      vjust=-1) +
+  xlab("Race") +
+  ylab("No. of\nPupils") +
+  theme(axis.title.y=element_text(angle = 0))
+```
 :::
 
 ## **6.2 Histogram**
@@ -794,6 +831,28 @@ ggplot(data = exam_data,
 [Below is the sample answer provided for this lesson]{style="font-size: 11pt; color: rgb(214, 156, 60);"}.
 
 [![](images/image-92343967.png)](https://isss608-ay2022-23jan.netlify.app/hands-on_ex/hands-on_ex01/hands-on_ex01-ggplot2#/designing-data-drive-graphics-for-analysis-ii-1)
+
+Below is the code chunk provided by the lesson :
+
+```{r}
+#| code-fold: false
+#| eval: false
+ggplot(data=exam_data, 
+       aes(x= MATHS)) +
+  geom_histogram(bins=20, 
+                 color="black", 
+                 fill="light blue") +
+  geom_vline(aes(xintercept=mean(MATHS,
+                                 na.rm=T)),
+             color="red", 
+             linetype="dashed", 
+             size=1) +
+  geom_vline(aes(xintercept=median(MATHS,
+                                  na.rm=T)),
+             color="grey30",
+             linetype="dashed", 
+             size=1)
+```
 :::
 
 ## **6.3 Trellis Plot for Histogram**
@@ -814,7 +873,24 @@ Create a makeover looks similar to the figure below. The background histograms s
 ### **6.3.2 Enhance Trellis Plot for Histogram**
 
 ```{r}
+#| code-fold: false
+gendEngl <- exam_data[,-3]
 
+ggplot(exam_data,
+       aes(x = ENGLISH, fill = GENDER)) +
+  geom_histogram(data = gendEngl, fill = "grey", alpha = .5) +
+  geom_histogram(color = "black") +
+  facet_wrap(~ GENDER) +
+  theme(axis.title.y = element_text(size = 5),
+        axis.title.x = element_text(size = 5),
+        axis.text.x = element_text(size = 5),
+        axis.text.y = element_text(size = 5),
+        panel.grid.major = element_line(colour = "steelblue", 
+                                        size = rel(0.5)),
+        panel.grid.minor = element_blank()) +
+  scale_y_continuous(limits = c(0,30)) +
+  guides(fill = FALSE) +
+  theme_bw()
 ```
 
 [Remarks :]{style="color:#d69c3c"}
@@ -822,37 +898,234 @@ Create a makeover looks similar to the figure below. The background histograms s
 -   [Below is the sample answer provided for this lesson]{style="font-size: 11pt; color: rgb(214, 156, 60);"}.
 
 [![](images/image-468107029.png)](https://isss608-ay2022-23jan.netlify.app/hands-on_ex/hands-on_ex01/hands-on_ex01-ggplot2#/designing-data-drive-graphics-for-analysis-iii)
+
+Below is the code chunk provided by the lesson :
+
+```{r}
+#| code-fold: false
+#| eval: false
+d <- exam_data   
+d_bg <- d[, -3]  
+
+ggplot(d, aes(x = ENGLISH, fill = GENDER)) +
+  geom_histogram(data = d_bg, fill = "grey", alpha = .5) +
+  geom_histogram(colour = "black") +
+  facet_wrap(~ GENDER) +
+  guides(fill = FALSE) +  
+  theme_bw()
+```
 :::
 
-## Designing Data-drive Graphics for Analysis IV
+## **6.4 Scatterplot**
 
-### The original design.
+::: {.callout-warning appearance="simple" icon="false"}
+text
 
-### ![](images/image-1638389725.png)
+### **6.4.1 Evaluate Original Scatterplot**
 
-Create a makeover looks similar to the figure on the right.
+![](images/image-1638389725.png)
 
 A within group scatterplot with reference lines.
 
-[![](https://isss608-ay2022-23jan.netlify.app/hands-on_ex/hands-on_ex01/Hands-on_Ex01-ggplot2_files/figure-revealjs/unnamed-chunk-79-1.png)](https://isss608-ay2022-23jan.netlify.app/hands-on_ex/hands-on_ex01/hands-on_ex01-ggplot2#/designing-data-drive-graphics-for-analysis-iv-1)
+```{r}
+#| code-fold: false
+ggplot(data = exam_data, 
+       aes(x = MATHS, 
+           y = ENGLISH)) +
+  geom_point(size = 1) +
+  coord_cartesian(xlim = c(0,100),
+                  ylim = c(0,100)) +
+  theme(axis.title.y = element_text(size = 8),
+        axis.title.x = element_text(size = 8),
+        axis.text.x = element_text(size = 6),
+        axis.text.y = element_text(size = 6)) +
+  geom_hline(yintercept = 50,
+             linetype = "dashed",
+             colour = "grey60",
+             size = 1) + 
+  geom_vline(xintercept = 50, 
+             linetype = "dashed",
+             colour = "grey60",
+             size = 1)
+```
 
-Homework
+Below is the code chunk provided by the lesson :
 
-Plot a trellis boxplot looks similar to the figure below.
+```{r}
+#| code-fold: false
+#| eval: false
+ggplot(data=exam_data, 
+       aes(x=MATHS, y=ENGLISH)) +
+  geom_point() +
+  coord_cartesian(xlim=c(0,100),
+                  ylim=c(0,100)) +
+  geom_hline(yintercept=50,
+             linetype="dashed",
+             color="grey60",
+             size=1) + 
+  geom_vline(xintercept=50, 
+             linetype="dashed",
+             color="grey60",
+             size=1)
+```
+:::
+
+## **6.5 Trellis Boxplot**
+
+::: {.callout-warning appearance="simple" icon="false"}
+This section consits of three different trellis plots. \### 6.5.1 Plot 2 Columns - 2 Characters and 1 Continuous Variable
 
 [![](images/image-339727884.png)](https://isss608-ay2022-23jan.netlify.app/hands-on_ex/hands-on_ex01/hands-on_ex01-ggplot2#/42)
 
+```{r}
+#| code-fold: false
+ggplot(data = exam_data, 
+       aes(y = MATHS,       
+           x = CLASS)) +    
+  geom_boxplot() +
+  facet_grid(~ GENDER) +
+  theme(axis.title.y = element_text(size = 7.5),
+        axis.title.x = element_text(size = 7.5),
+        axis.text.x = element_text(size = 7),
+        axis.text.y = element_text(size = 7))
+```
+
+Below is the code chunk provided by the lesson :
+
+```{r}
+#| code-fold: false
+#| eval: false
+ggplot(data=exam_data, 
+       aes(y = MATHS, x= CLASS)) +
+  geom_boxplot() +
+  facet_grid(~ GENDER)
+```
+
+### **6.5.2 Plot 1 Column, 2 Rows - 2 Characters and 1 Continuous Variables**
+
 [![](images/image-811211769.png)](https://isss608-ay2022-23jan.netlify.app/hands-on_ex/hands-on_ex01/hands-on_ex01-ggplot2#/43)
+
+```{r}
+#| code-fold: false
+ggplot(data = exam_data, 
+       aes(y = MATHS,       
+           x = CLASS)) +    
+  geom_boxplot() +
+  facet_grid(GENDER ~ CLASS, scales = "free") +
+  theme(axis.title.y = element_text(size = 7.5),
+        axis.title.x = element_text(size = 7.5),
+        axis.text.x = element_text(size = 7),
+        axis.text.y = element_text(size = 7),
+        strip.text.x = element_blank(),
+        strip.text.y = element_text(size = 7),
+        panel.spacing.y = unit(1, "mm"),
+        panel.spacing.x = unit(0, "mm")
+        )
+```
+
+Below is the code chunk provided by the lesson :
+
+```{r}
+#| code-fold: false
+#| eval: false
+ggplot(data=exam_data, 
+       aes(y = MATHS, x= CLASS)) +
+  geom_boxplot() +
+  facet_grid(GENDER ~.)
+```
+
+### **6.5.3 Plot 1 Column, 2 Rows - 2 Characters and 1 Continuous Variables**
 
 [![](images/image-468521342.png)](https://isss608-ay2022-23jan.netlify.app/hands-on_ex/hands-on_ex01/hands-on_ex01-ggplot2#/44)
 
-Plot a horizontal bar chart looks similar to the figure below.
+```{r}
+#| code-fold: false
+ggplot(data = exam_data, 
+       aes(y = MATHS,       
+           x = GENDER)) +    
+  geom_boxplot() +
+  facet_grid(GENDER ~ CLASS, scales = "free") +
+  theme(axis.title.y = element_text(size = 7.5),
+        axis.title.x = element_text(size = 7.5),
+        axis.text.x = element_text(size = 6.5),
+        axis.text.y = element_text(size = 6.5),
+        strip.text.y = element_text(size = 7),
+        strip.text.x = element_text(size = 7),
+        panel.spacing.y = unit(1, "mm"),
+        panel.spacing.x = unit(1, "mm")
+        )
+```
 
--   Changing the colors of plot panel background of `theme_minimal()` to light blue and the color of grid lines to white.
+Below is the code chunk provided by the lesson :
 
+```{r}
+#| code-fold: false
+#| eval: false
+ggplot(data=exam_data, 
+       aes(y = MATHS, x= GENDER)) +
+  geom_boxplot() +
+    facet_grid(GENDER ~ CLASS)
+```
+:::
+
+## **6.6 Change Theme**
+
+::: {.callout-warning appearance="simple" icon="false"}
 [![](images/image-78293342.png)](https://isss608-ay2022-23jan.netlify.app/hands-on_ex/hands-on_ex01/hands-on_ex01-ggplot2#/52)
 
-## 7. REFERENCES
+Instruction :
+
+Change the colour of plot panel background of `theme_minimal()` to light blue and the colour of grid lines to white.
+
+```{r}
+#| code-fold: false
+ggplot(data = exam_data, 
+       aes(x = RACE)) +
+  geom_bar() +
+  coord_flip() +
+  theme_minimal() +
+  theme(
+    panel.background = element_rect(fill = "lightblue",
+                                    colour = "lightblue"),
+    panel.grid.major = element_line(size = 0.5,
+                                    linetype = "solid",
+                                    colour = "white"),
+    axis.title.y = element_text(size = 7.5),
+    axis.title.x = element_text(size = 7.5),
+    axis.text.x = element_text(size = 6.5),
+    axis.text.y = element_text(size = 6.5)
+    )
+```
+
+Below is the code chunk provided by the lesson :
+
+```{r}
+#| code-fold: false
+#| eval: false
+ggplot(data=exam_data, 
+       aes(x=RACE)) +
+  geom_bar() +
+  coord_flip() +
+  theme_minimal() +
+  theme(panel.background = element_rect(
+    fill = "lightblue",
+    colour = "lightblue",
+    size = 0.5,
+    linetype = "solid"),
+    panel.grid.major = element_line(
+      size = 0.5,
+      linetype = 'solid',
+      colour = "white"), 
+    panel.grid.minor = element_line(
+      size = 0.25,
+      linetype = 'solid',
+      colour = "white"))
+```
+:::
+
+<br>
+
+# **7. REFERENCES**
 
 -   Hadley Wickham (2023) [**ggplot2: Elegant Graphics for Data Analysis**](https://ggplot2-book.org/). Online 3rd edition.
 
