--- a/takeHome/th_ex1/th_ex1.qmd
+++ b/takeHome/th_ex1/th_ex1.qmd
@@ -81,19 +81,23 @@ This study will be based on demographic data set downloadable from [Singstat.gov
 ### **2.1.2 Upload Data**
 
 ::: {.callout-warning appearance="simple" icon="false"}
-Step1 - Click "**File**" from the Tableau Desktop main menu and select "**Open**" from the drop-down options.
+::: {.callout-note appearance="simple" icon="false"}
+**Step-1** : Click "**File**" from the Tableau Desktop main menu and select "**Open**" from the drop-down options.
+:::
 
 ![Figure 2.1](images/image-1671792539.png){fig-alt="To upload data into Tableau Desktop, first click on \"File\" from the main menu." width="400"}
 
 ::: {.callout-tip collapse="true" appearance="simple" icon="false"}
 ## [**note : If the above screen is not your landed screen, click here**]{style="color:#3a9c88"}
 
-Don't panic, click "**Data Source**" at the bottom left corner. Once landed on the homepage, can perform step-1.
+Fret not! If **Figure 2.2** is your landed screen, from the bottom left corner, click "**Data Source**". You will be directed to the homepage, then perform **Step-1**.
 
-![Figure 2.2](images/image-987662873.png){fig-alt="Click on \"Data Source\" to direct the user to the homepage if the user landed on different page." width="400"}
+![Figure 2.2](images/image-987662873.png){fig-alt="This image shows the clickable \"Data Source\" to direct user to the homepage." width="400"}
 :::
 
-Step-2 - Select "**respopagesextod2022**" when prompted by an "**Open**" window.
+::: {.callout-note appearance="simple" icon="false"}
+**Step-2** : Select "**respopagesextod2022**" when prompted by an "**Open**" window.
+:::
 
 ![Figure 2.3 Screen-look when loaded with data.](images/image-1547787260.png){fig-alt="To create a \"Calculated Field\", click the triangle icon next to the \"Sex\" field." width="400"}
 :::
@@ -118,7 +122,7 @@ Step-5 - To create "**Male Population**" measured field, first change the field 
 Step-6 - Repeat **Step-5** but with title as "**Female Population**", and replace "**Males**" with "**Females**".
 :::
 
-### **2.2.2 Identify Top 9 Planning Area by Population** 
+### **2.2.2 Identify Top 9 Planning Area by Population**
 
 ::: {.callout-warning appearance="simple" icon="false"}
 Step-7 - Double click "**PA**" field to place it within the "**Rows**" panel, as shown in **Figure 2.7**.
@@ -143,9 +147,8 @@ Step-12 - Edit Axis :
 
 -   Tick the "Fixed" range option.
 
-```{=html}
 <!-- -->
-```
+
 -   Increase the value for "Fixed start" to 90,000.
 
 -   Reduce the value for "Fixed end" to 150,000.
@@ -192,9 +195,13 @@ Enrich the population pyramid with more information for in-depth visual analytic
 ## 3.1 Add Details :: Population Count
 
 ::: {.callout-warning appearance="simple" icon="false"}
+::: {.callout-note appearance="simple" icon="false"}
 Step 1 - Click on "Label" under "Marks" pane for both gender.
+:::
 
+::: {.callout-note appearance="simple" icon="false"}
 Step 2 - Tick "Show mark labels" checkbox, as shown below.
+:::
 
 ![](images/image-1070783411.png)
 
