--- a/takeHome/th_ex1/th_ex1.qmd
+++ b/takeHome/th_ex1/th_ex1.qmd
@@ -85,21 +85,21 @@ This study will be based on demographic data set downloadable from [Singstat.gov
 **Step-1** : Click "**File**" from the Tableau Desktop main menu and select "**Open**" from the drop-down options.
 :::
 
-![Figure 2.1](images/image-1671792539.png){fig-alt="To upload data into Tableau Desktop, first click on \"File\" from the main menu." width="400"}
+![Figure 2.1](images/image-1671792539.png){fig-alt="To upload data into Tableau Desktop, first click on \"File\" from the main menu." fig-align="left" width="400"}
 
 ::: {.callout-tip collapse="true" appearance="simple" icon="false"}
 ## [**note : If the above screen is not your landed screen, click here**]{style="color:#3a9c88"}
 
 Fret not! If **Figure 2.2** is your landed screen, from the bottom left corner, click "**Data Source**". You will be directed to the homepage, then perform **Step-1**.
 
-![Figure 2.2](images/image-987662873.png){fig-alt="This image shows the clickable \"Data Source\" to direct user to the homepage." width="400"}
+![Figure 2.2](images/image-987662873.png){fig-alt="This image shows the clickable \"Data Source\" to direct user to the homepage." fig-align="left" width="400"}
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
 **Step-2** : Select "**respopagesextod2022**" when prompted by an "**Open**" window.
 :::
 
-![Figure 2.3 Screen-look when loaded with data.](images/image-1547787260.png){fig-alt="To create a \"Calculated Field\", click the triangle icon next to the \"Sex\" field." width="400"}
+![Figure 2.3 Screen-look when loaded with data.](images/image-1547787260.png){fig-alt="To create a \"Calculated Field\", click the triangle icon next to the \"Sex\" field." fig-align="left" width="400"}
 :::
 
 ## **2.2 Wrangle Data**
@@ -107,92 +107,94 @@ Fret not! If **Figure 2.2** is your landed screen, from the bottom left corner, 
 ### **2.2.1 Derive New Calculated Fields**
 
 ::: {.callout-warning appearance="simple" icon="false"}
-Step-3 - Click on the inverted triangle icon under the "**Sex**" field, as highlighted in **Figure 2.3**.
+::: {.callout-note appearance="simple" icon="false"}
+**Step-3 : Click on the inverted triangle icon under the "Sex**" field, as highlighted in **Figure 2.3**.
+:::
 
-![Figure 2.4](images/image-1398127722.png){fig-alt="To open the input panel for the creation of calculated field." width="400"}
+![Figure 2.4](images/image-1398127722.png){fig-alt="To open the input panel for the creation of calculated field." fig-align="left" width="400"}
 
-Step-4 - Select "**Create Calculated Field...**" from the drop-down options (refers to **Figure 2.4**) to open an input panel, as shown in **Figure 2.5**.
+::: {.callout-note appearance="simple" icon="false"}
+**Step-4 : Select "Create Calculated Field...**" from the drop-down options (refers to **Figure 2.4)** to open an input panel, as shown in **Figure 2.5**.
+:::
 
-![Figure 2.5](images/image-726087864.png){fig-alt="User will be prompted with the input panel for the creation of calculated field." width="400"}
+![Figure 2.5](images/image-726087864.png){fig-alt="User will be prompted with the input panel for the creation of calculated field." fig-align="left" width="400"}
 
-Step-5 - To create "**Male Population**" measured field, first change the field title to "**Male Population**". Next, input "**IF \[Sex\] ="Males" THEN \[Pop\] END**", as shown in **Figure 2.6**.
+::: {.callout-note appearance="simple" icon="false"}
+**Step-5 :** To create **"Male Population" measured field, first change the field title to** "Male Population". Next, input **"IF \[Sex\] ="Males" THEN \[Pop\] END**", as shown in **Figure 2.6**.
+:::
 
-![Figure 2.6](images/image-1552505160.png){fig-alt="Input title and formula to derive a new calculated field i.e. \"Male Population\"." width="400"}
+![Figure 2.6](images/image-1552505160.png){fig-alt="Input title and formula to derive a new calculated field i.e. \"Male Population\"." fig-align="left" width="400"}
 
-Step-6 - Repeat **Step-5** but with title as "**Female Population**", and replace "**Males**" with "**Females**".
+::: {.callout-note appearance="simple" icon="false"}
+**Step-6 :** Repeat *Step-5* but with title as "**Female Population**", and replace "**Males**" with "**Females**".
+:::
 :::
 
 ### **2.2.2 Identify Top 9 Planning Area by Population**
 
 ::: {.callout-warning appearance="simple" icon="false"}
-Step-7 - Double click "**PA**" field to place it within the "**Rows**" panel, as shown in **Figure 2.7**.
-
-Step-8 - Double click "**Pop**" field from the table on the left. It will be automatically summed up within the "**Rows**" panel.
-
-![Figure 2.7](images/image-1919704893.png){fig-alt="Sum population for each planning area in Singapore." width="400"}
-
-Step-9 - Change "**10**" to "**9**" for the "**Top**" value under the **"Top**" tab, as shown in **Figure 2.8**.
-
-![Figure 2.8](images/image-690824896.png){width="400"}
-
-Step-10 - Drag "**Sex**" to place at the "**Color**" under "**Marks**" pane, as shown in **Figure 2.9**.
-
-![Figure 2.9](images/image-714966271.png){fig-alt="Filtered output that shows top 9 planning area with the highest Singapore population count." width="400"}
-
-Step-11 - Select "**circle views**" from the "**Show Me**" pane.
-
-![Figure 2.10](images/image-306868433.png){fig-alt="Edit y-axis to reduce empty space below the plot." width="400"}
-
-Step-12 - Edit Axis :
-
--   Tick the "Fixed" range option.
-
-<!-- -->
-
--   Increase the value for "Fixed start" to 90,000.
-
--   Reduce the value for "Fixed end" to 150,000.
-
-![Figure 2.11](images/image-453180512.png){fig-alt="Show mark label, chart title." width="400"}
-
-Step-13 - Show mark label, as shown in Figure 2.11.
-
-Step-114 - Add chart title.
+::: {.callout-note appearance="simple" icon="false"}
+**Step-7 : PA**" field to place it within the "**Rows**" panel, as shown in **Figure 2.7**.
 :::
 
-## 2.3 Plot Population Pyramid
+::: {.callout-note appearance="simple" icon="false"}
+**Step-8** : Double click "**Pop**" field from the table on the left. It will be automatically summed up within the "**Rows**" panel.
+:::
+
+![Figure 2.7](images/image-1871491101.png){fig-align="left" width="400"}
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-9** : Right click on the space highlighted in red, above the population count column to sort the counts in "**Sort descending**" order. Refer to **Figure 2.8**.
+:::
+
+![Figure 2.8](images/image-1919704893.png){fig-alt="Sum population for each planning area in Singapore." fig-align="left" width="400"}
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-10** : Click the inverted triangle icon (next to "**PA**" at the "**Rows**" pane) and select "**Filter**" to open the "**Filter \[PA\]**" pane.
+
+Next, change "**10**" to "**9**" for the "**Top**" value under the **"Top**" tab, as shown in **Figure 2.9**.
+:::
+
+![Figure 2.9](images/image-690824896.png){fig-align="left" width="400"}
+:::
+
+### **2.2.3 Plot Trellis Population Pyramid**
 
 ::: {.callout-warning appearance="simple" icon="false"}
-Step 1 - Double click "AG" to place it within the "Rows" panel.
+![Figure 2.10](images/image-1079669590.png){fig-align="left" width="400"}
 
-Step 2 - Drag the "Sex" field to "Color" under the "Marks" panel.
-
-By now, the sheet should have been set up like the screenshot below.
-
-![](images/image-694405821.png)
-
-Step 3 - Drag both Male and Female Population fields to the "Columns" pane. The square display will be turned into horizontal bar display, as shown below.
-
-![](images/image-623100833.png)
-
-Step 4 - Right click on the "Male Population" as shown above to select "Edit Axis...".
-
-Step 5 - Tick the "Reversed" checkbox under the "Scale" section.
-
-![](images/image-397082679.png)
-
-There you go, a basic population pyramid!
-
-![](images/image-1982425736.png)
+::: {.callout-note appearance="simple" icon="false"}
+**Step-11** : Select "horizontal bars" from the "Show Me" chart options.
 :::
 
-</div>
+![Figure 2.11](images/image-1153609685.png){fig-align="left" width="400"}
 
-# 3. ENHANCEMENT FOR VISUAL ANALYTICS
+::: {.callout-note appearance="simple" icon="false"}
+**Step-12** : Drag "Gender" to "Color" under "Marks" pane. Next, drag the filtered "PA" to "Columns" and replace the "Rows" field with "Age Group". Thereafter, place "Male Population" and "Female Population" fields to the "Columns". Refers to **Figure 2.11**.
+:::
+
+![Figure 2.12](images/image-1115048381.png){fig-align="left" width="400"}
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-13** : Right click the "Male Population" at the x-axis to select "Edit Axis...".
+:::
+
+![Figure 2.13](images/image-23982472.png){fig-align="left" width="400"}
+
+::: {.callout-note appearance="simple" icon="false"}
+**Step-14** : Tick "Reversed" check box under "Scale" section, as shown in **Figure 2.13**.
+:::
+
+[![Figure 2.14](images/image-1174017359.png){fig-alt="Top 9 Highest Singapore Planning Area by Population Count based on June 2022 dataset." fig-align="left" width="400"}](https://public.tableau.com/views/SingaporePopulationPyramindJun2022v1_1/Dashboard2?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link)
+
+Remarks :
+:::
+
+# **3. ENHANCEMENT FOR VISUAL ANALYTICS**
 
 Enrich the population pyramid with more information for in-depth visual analytics.
 
-## 3.1 Add Details :: Population Count
+## **3.1 Add Details :: Population Count**
 
 ::: {.callout-warning appearance="simple" icon="false"}
 ::: {.callout-note appearance="simple" icon="false"}
@@ -203,21 +205,43 @@ Step 1 - Click on "Label" under "Marks" pane for both gender.
 Step 2 - Tick "Show mark labels" checkbox, as shown below.
 :::
 
-![](images/image-1070783411.png)
+![](images/image-1070783411.png){fig-align="left" width="400"}
 
 Remarks :
 
 Notice 19 nulls - indicates 19 PA for 85 to 89 AND 90 and over have 0 value.
 
-[![Click the image will direct to the Public Tableau site for more interactive details.](images/image-2128803489.png){fig-alt="Singapore Population Pyramid to illustrate the distribution of Gender by Age Groups, June 2022"}](https://public.tableau.com/app/profile/joseph.zexeong.tan/viz/SingaporePopulationPyramindJun2022v1_0/dashboard1?publish=yes)
+[![Click the image will direct to the Public Tableau site for more interactive details.](images/image-2128803489.png){fig-alt="Singapore Population Pyramid to illustrate the distribution of Gender by Age Groups, June 2022" fig-align="left" width="400"}](https://public.tableau.com/app/profile/joseph.zexeong.tan/viz/SingaporePopulationPyramindJun2022v1_0/dashboard1?publish=yes)
 :::
 
 \- Please refer to the senior submission I shared for example [1](https://bilian-mitb2021.netlify.app/th_ex/dataviz2/dataviz2#step-by-step-description) and [2](https://isss608visualanalyticssun.netlify.app/dataviz/dataviz1/dataviz1#step-by-step-preparation).
 
-# 4. DISCUSSION
+# **4. DISCUSSION**
 
 ::: {.callout-warning appearance="simple" icon="false"}
 500 words
 
 \- discuss patterns reveal by the analytical visualisation prepared
 :::
+
+Exploration to Improve Visual Analytics
+
+Step-10 - Drag "**Sex**" to place at the "**Color**" under "**Marks**" pane, as shown in **Figure 2.9**.
+
+![Figure 2.9](images/image-714966271.png){alt="Figure 2.9" fig-alt="Filtered output that shows top 9 planning area with the highest Singapore population count." fig-align="left" width="400"}
+
+Step-11 - Select "**circle views**" from the "**Show Me**" pane.
+
+![Figure 2.10](images/image-306868433.png){alt="Figure 2.10" fig-alt="Edit y-axis to reduce empty space below the plot." fig-align="left" width="400"}
+
+Step-12 - Edit Axis :
+
+-   Tick the "Fixed" range option.
+-   Increase the value for "Fixed start" to 90,000.
+-   Reduce the value for "Fixed end" to 150,000.
+
+![Figure 2.11](images/image-453180512.png){alt="Figure 2.11" fig-alt="Show mark label, chart title." fig-align="left" width="400"}
+
+Step-13 - Show mark label, as shown in Figure 2.11.
+
+Step-14 - Add chart title.
